--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,11 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import libraries here"
+    "# import libraries here\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -37,11 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "temp=pd.read_csv('Temp_States.csv')"
    ]
   },
   {
@@ -53,11 +57,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         City        State  Temperature\n",
+      "0         NYC     New York    19.444444\n",
+      "1      Albany     New York     9.444444\n",
+      "2     Buffalo     New York     3.333333\n",
+      "3    Hartford  Connecticut    17.222222\n",
+      "4  Bridgeport  Connecticut    14.444444\n",
+      "5      Treton   New Jersey    22.222222\n",
+      "6      Newark   New Jersey    20.000000\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "print(temp)"
    ]
   },
   {
@@ -69,11 +89,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 7 entries, 0 to 6\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   City         7 non-null      object \n",
+      " 1   State        7 non-null      object \n",
+      " 2   Temperature  7 non-null      float64\n",
+      "dtypes: float64(1), object(2)\n",
+      "memory usage: 300.0+ bytes\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "temp.info()"
    ]
   },
   {
@@ -83,8 +121,9 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "your comments here\n",
-    "\"\"\""
+    "We have two columns with categorical data that have object values and one column with numerical data with float values\n",
+    "\"\"\"\n",
+    "# I honestly don`t know what else to comment on this subject"
    ]
   },
   {
@@ -96,11 +135,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NYC</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>19.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albany</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>9.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Buffalo</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>3.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      City     State  Temperature\n",
+       "0      NYC  New York    19.444444\n",
+       "1   Albany  New York     9.444444\n",
+       "2  Buffalo  New York     3.333333"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "new_york_state = temp[temp['State'] == 'New York']\n",
+    "new_york_state"
    ]
   },
   {
@@ -112,11 +214,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.74074074074074"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "av_temp_NY = new_york_state['Temperature'].mean()\n",
+    "av_temp_NY"
    ]
   },
   {
@@ -128,11 +243,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NYC</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>19.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hartford</td>\n",
+       "      <td>Connecticut</td>\n",
+       "      <td>17.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Treton</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>22.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Newark</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       City        State  Temperature\n",
+       "0       NYC     New York    19.444444\n",
+       "3  Hartford  Connecticut    17.222222\n",
+       "5    Treton   New Jersey    22.222222\n",
+       "6    Newark   New Jersey    20.000000"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "temp_above_15 = temp[temp['Temperature'] > 15]\n",
+    "temp_above_15"
    ]
   },
   {
@@ -144,11 +329,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NYC</td>\n",
+       "      <td>19.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hartford</td>\n",
+       "      <td>17.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Treton</td>\n",
+       "      <td>22.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Newark</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       City  Temperature\n",
+       "0       NYC    19.444444\n",
+       "3  Hartford    17.222222\n",
+       "5    Treton    22.222222\n",
+       "6    Newark    20.000000"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "\n",
+    "temp_above_15 = temp[temp['Temperature'] > 15].drop(columns='State')\n",
+    "temp_above_15"
    ]
   },
   {
@@ -162,11 +413,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NYC</td>\n",
+       "      <td>19.444444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hartford</td>\n",
+       "      <td>17.222222</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       City  Temperature\n",
+       "0       NYC    19.444444\n",
+       "3  Hartford    17.222222"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "cond1 = temp['Temperature'] > 15\n",
+    "cond2 = temp['Temperature'] < 20\n",
+    "temp_ab15_bel20 = temp[cond1 & cond2].drop(columns='State')\n",
+    "temp_ab15_bel20\n"
    ]
   },
   {
@@ -178,11 +484,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean temperature per state is:\n",
+      "      New York: 10.7 degrees C \n",
+      "      Connecticut: 15.8 degrees C\n",
+      "      New Jersey: 21.1 degrees C\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "mean_temps = []\n",
+    "mean_temps.append(round(temp[temp['State'] == 'New York']['Temperature'].mean(), 1))\n",
+    "mean_temps.append(round(temp[temp['State'] == 'Connecticut']['Temperature'].mean(), 1))\n",
+    "mean_temps.append(round(temp[temp['State'] == 'New Jersey']['Temperature'].mean(), 1))\n",
+    "\n",
+    "print(f'''The mean temperature per state is:\n",
+    "      New York: {mean_temps[0]} degrees C \n",
+    "      Connecticut: {mean_temps[1]} degrees C\n",
+    "      New Jersey: {mean_temps[2]} degrees C''')\n"
    ]
   },
   {
@@ -799,7 +1125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
